hdf5-derive/tests/compile-fail/empty-struct.stderr
error: proc-macro derive panicked
 --> $DIR/empty-struct.rs:4:10
  |
4 | #[derive(H5Type)]
  |          ^^^^^^
  |
  = help: message: Cannot derive H5Type for empty structs
